objects/Account.object
<CustomObject>
    <fields>
        <fullName>ProService_LegalEntity__c</fullName>
        <description>Standard Picklist Dependent upon Service Type</description>
        <inlineHelpText>Standard Picklist Dependent upon Service Type</inlineHelpText>
        <label>ProService Legal Entity</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>ServiceType_Picklist__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ProService Hawaii BDC</fullName>
                </value>
                <value>
                    <fullName>ProService Connect, Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService Focus, Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService HR</fullName>
                </value>
                <value>
                    <fullName>ProService Solutions Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService Advantage Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService Pacific</fullName>
                </value>
                <value>
                    <fullName>ProService Elite</fullName>
                </value>
                <value>
                    <fullName>ProService Innovation, Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService Optimum Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService Human Resource, Inc.</fullName>
                </value>
                <value>
                    <fullName>HRO Client</fullName>
                </value>
                <value>
                    <fullName>ProService HRO, Inc.</fullName>
                </value>
                <value>
                    <fullName>ProService National</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proferral_Profile__c</fullName>
        <label>Proferral Profile</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Likely to Refer</fullName>
                </value>
                <value>
                    <fullName>Somewhat Likely to Refer</fullName>
                </value>
                <value>
                    <fullName>Highly Likely to Refer</fullName>
                </value>
                <value>
                    <fullName>Create Excellence</fullName>
                    <isActive>false</isActive>
                    <label>Create Excellence</label>
                </value>
                <value>
                    <fullName>Create Opportunity</fullName>
                    <isActive>false</isActive>
                    <label>Create Opportunity</label>
                </value>
                <value>
                    <fullName>Create Value</fullName>
                    <isActive>false</isActive>
                    <label>Create Value</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposal_Date__c</fullName>
        <description>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Proposal."</description>
        <inlineHelpText>Read-only populated from Opportunity - Date when OPEN opportunity status was updated to "Proposal."</inlineHelpText>
        <label>Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RME_1_License_Exp_Date__c</fullName>
        <label>RME 1 - License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RME_1_License__c</fullName>
        <label>RME 1 - License #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RME_1_Name__c</fullName>
        <label>RME 1 - Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RME_2_License_Exp_Date__c</fullName>
        <label>RME 2 - License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RME_2_License__c</fullName>
        <label>RME 2 - License #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RME_2_Name__c</fullName>
        <label>RME 2 - Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RME_3_License_Exp_Date__c</fullName>
        <label>RME 3 - License Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RME_3_License__c</fullName>
        <label>RME 3 - License #</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RME_3_Name__c</fullName>
        <label>RME 3 - Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_s_For_Buying__c</fullName>
        <description>These reasons the client cited during the sales process for coming onboard with ProService.</description>
        <inlineHelpText>These reasons the client cited during the sales process for coming onboard with ProService.</inlineHelpText>
        <label>Reason(s) For Buying</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Healthcare Savings</fullName>
                </value>
                <value>
                    <fullName>HR Services, Support &amp; Compliance</fullName>
                </value>
                <value>
                    <fullName>Payroll Services</fullName>
                </value>
                <value>
                    <fullName>PEO Bundle</fullName>
                </value>
                <value>
                    <fullName>Previously with PSH</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied with previous PEO</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reasons_to_Buy_OTHER__c</fullName>
        <description>These reasons the client cited during the sales process for coming onboard with ProService that are not listed already.</description>
        <inlineHelpText>These reasons the client cited during the sales process for coming onboard with ProService that are not listed already.</inlineHelpText>
        <label>Reasons to Buy (OTHER)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referees_Name__c</fullName>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Referee's Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Client_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Referred by Client/Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Department__c</fullName>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Referred by Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client HR</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>HR Associates</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Team</fullName>
                </value>
                <value>
                    <fullName>Internal HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Pricing &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Risk Control</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by_EE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Referred by EE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_s_Name__c</fullName>
        <description>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>Referrer's Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Accounts__c</fullName>
        <inlineHelpText>Client ID's for related accounts</inlineHelpText>
        <label>Related Accounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Control_Consultant__c</fullName>
        <inlineHelpText>If no assigned Risk Control Consultant, see Allan Yokoyama or Jason Collins.
Overall safety needs are handled by the Risk Control Consultants.  Most safety training needs are handled by the Risk Control Coordinator.</inlineHelpText>
        <label>Risk Control Consultant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Control_Coordinator__c</fullName>
        <inlineHelpText>Overall safety needs are handled by the Risk Control Consultants. 
Most safety training needs are handled by the Risk Control Coordinator.

CRAIG OKUTANI - Lokahi, Hookela, Kokua
MHYRA CARMONA - Pono, Lauli, Hoomau</inlineHelpText>
        <label>Risk Control Coordinator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SD_Formula_Test__c</fullName>
        <formula>IF( Special_Considerations__c  = "S &amp; D Client", IMAGE("/servlet/servlet.FileDownload?file=01580000001xhJT", "S &amp; D"),
IF( BEGINS (Special_Considerations__c, "PFK-HOT"), IMAGE("/servlet/servlet.FileDownload?file=01534000001potI", "PFK-HOT"),
IF( Special_Considerations__c  = "PFK", IMAGE("/servlet/servlet.FileDownload?file=01534000001potN", "PFK"),"")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFAccountID__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_BDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to SalesUser (BDM)</description>
        <label>Sales (BDM)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Read only. Update in Opportunity. Lookup to the User that is the Sales Ops Owner</description>
        <inlineHelpText>Read only. Update in Opportunity. Lookup to the User that is the Sales Ops Owner</inlineHelpText>
        <label>Sales Ops Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceType_Picklist__c</fullName>
        <description>Read-only because updated from open Opportunity</description>
        <inlineHelpText>Read-only because updated from open Opportunity</inlineHelpText>
        <label>Service Type Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PEO</fullName>
                </value>
                <value>
                    <fullName>HRO-HRP</fullName>
                </value>
                <value>
                    <fullName>HRO-Ultipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Level__c</fullName>
        <label>Tier</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Model__c</fullName>
        <label>Service Model</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>HRO</fullName>
                </value>
                <value>
                    <fullName>PEO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service team manager for teams</description>
        <inlineHelpText>Service team manager for teams</inlineHelpText>
        <label>Service Team Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Years__c</fullName>
        <label>Service Years</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Account_Designation__c</fullName>
        <label>Special Account Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TESTIMONIAL</fullName>
                </value>
                <value>
                    <fullName>TROPHY</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Account_Notes__c</fullName>
        <label>Special Account Notes</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Special_Considerations__c</fullName>
        <label>Special Considerations</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage the Account is in (only for Pending Accounts - not Active or Termed customers)</description>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>OpenCold</fullName>
                </value>
                <value>
                    <fullName>OpenWarm</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Term</fullName>
                </value>
                <value>
                    <fullName>Closed for future review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <inlineHelpText>Effective date of the Status</inlineHelpText>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Description__c</fullName>
        <label>Status Description</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Did Not Materialize</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Pending Termination</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
                <value>
                    <fullName>Term In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Term In Process</fullName>
                </value>
                <value>
                    <fullName>Did Not Materialize</fullName>
                </value>
                <value>
                    <fullName>Open Cold</fullName>
                </value>
                <value>
                    <fullName>Open Warm</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Recently Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Surge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Surge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HRP</fullName>
                </value>
                <value>
                    <fullName>ULTI</fullName>
                </value>
                <value>
                    <fullName>HRP CLOUD</fullName>
                </value>
                <value>
                    <fullName>PRISM CLOUD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TASCID__c</fullName>
        <description>TASC ID for Supplemental Benefits</description>
        <externalId>true</externalId>
        <inlineHelpText>TASC ID for Supplemental Benefits</inlineHelpText>
        <label>TASC ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TA_Single_Sign_On__c</fullName>
        <label>T&amp;A Single Sign-On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SSO Only</fullName>
                </value>
                <value>
                    <fullName>SSO Enabled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TDI_Carve_Out__c</fullName>
        <label>TDI Carve Out</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTM_Admin_Fee__c</fullName>
        <label>TTM Admin Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TTM_Gross_Payroll__c</fullName>
        <label>TTM Gross Payroll</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Package_File_Name__c</fullName>
        <description>This is the system name generated by Master Tax when the quarterly tax packages are created for HRO client.</description>
        <inlineHelpText>This is the system name generated by Master Tax when the quarterly tax packages are created for HRO client. DO NOT edit this field. This field is maintained by Client Relations.</inlineHelpText>
        <label>Tax Package File Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Alakai_Training_Current_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Team Alaka'i (Client HR and Safety) training held during current year.</inlineHelpText>
        <label>Team Alakai - Training Held Current Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Team_Alakai_Training_Date__c</fullName>
        <inlineHelpText>Team Alaka'i (Client HR and Safety) first training date held this year.</inlineHelpText>
        <label>Team Alakai - First Training Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Team_Email__c</fullName>
        <inlineHelpText>Test</inlineHelpText>
        <label>Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Team_Fax__c</fullName>
        <description>Test</description>
        <label>Team Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Team_Phone__c</fullName>
        <description>Test</description>
        <label>Team Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Initiation__c</fullName>
        <label>Term Initiation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Attendance__c</fullName>
        <label>Time &amp; Attendance</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Length_of_Service__c</fullName>
        <description>placeholder, need to develop the formula

IF(ISBLANK(End_Date__c),
TEXT(Year(  TODAY()  )- Year(  Start_Date__c  )) &amp;" "&amp;"years"&amp;" "&amp;
TEXT(Month(  TODAY()  )-Month(  Start_Date__c  )) &amp;" "&amp;"months"&amp;" "&amp;
TEXT(Day(  TODAY()  )-Day(  Start_Date__c  ))&amp;" "&amp;"days",
TEXT(Year(  End_Date__c  )- Year(  Start_Date__c  )) &amp;" "&amp;"years"&amp;" "&amp;
TEXT(Month(  End_Date__c  )-Month(  Start_Date__c  )) &amp;" "&amp;"months"&amp;" "&amp;
TEXT(Day(  End_Date__c  )-Day(  Start_Date__c  ))&amp;" "&amp;"days")</description>
        <label>Total Length of Service</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_On_Benefits__c</fullName>
        <label>Total On Benefits</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Paid_EE__c</fullName>
        <label>Total Paid EE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ulipro_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes whether or not the client is in Ultipro (not in HRP)</description>
        <label>Ultipro Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VOC_Survey_Month__c</fullName>
        <label>NPS Survey Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
                <value>
                    <fullName>Do Not Survey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_Carrier__c</fullName>
        <label>WC Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Deductible_Carve_Out_Status__c</fullName>
        <description>This field is a direct feed from HRP or the Ulti User Database and contains either a client's workers' comp deductible ro an indicaiton of the carve out status of their workers' comp.</description>
        <inlineHelpText>This field is a direct feed from HRP or the Ulti User Database and contains either a client's workers' comp deductible ro an indicaiton of the carve out status of their workers' comp.</inlineHelpText>
        <label>WC Deductible/Carve Out Status</label>
        <length>65</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC_Service_Type__c</fullName>
        <label>WC Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WelcomePacketExceptions__c</fullName>
        <label>Welcome Packet Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Date_CS__c</fullName>
        <description>Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</description>
        <inlineHelpText>Date of lead read-only because populated from Opportunity (if not Opp, fields from CS Import)</inlineHelpText>
        <label>1st Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>XXOpp_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>XXOpp External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Year_of_Establishment__c</fullName>
        <label>Year of Establishment</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eOnboarding_Segment__c</fullName>
        <label>eOnboarding Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>Client_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Account_Manager__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account_Clients</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Pending</value>
        </filters>
        <label>All Active Clients</label>
    </listViews>
    <listViews>
        <fullName>All_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Estimated_number_of_EEs_c__c</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>Island_s__c</columns>
        <columns>ACCOUNT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account_Prospects</value>
        </filters>
        <label>All Prospects</label>
    </listViews>
    <listViews>
        <fullName>By_Island_Big_Island</fullName>
        <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>96704,96710,96718,96719,96720,96721,96725,96726,96727,96728,96737,96738,96739</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>96740,96743,96745,96749,96750,96755,96760,96764,96771,96772,96773,96774,96776</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>96777,96778,96780,96781,96783,96785</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open Cold</value>
        </filters>
        <label>By Island - Big Island (Open Cold)</label>
        <sharedTo>
            <group>Sales_Sales_Op</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>By_Island_Kauai_Open_Cold</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>96703,96705,96714,96715,96716,96722,96741,96746,96747,96751,96752,96754,96756</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_ZIP</field>
            <operation>equals</operation>
            <value>96765,96766,96769,96796</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open Cold</value>
        </filters>
        <label>By Island - Kauai (Open Cold)</label>
        <sharedTo>
            <group>Sales_Sales_Op</group>
        </sharedTo>
    </listViews>
</CustomObject>